codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_error_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2796
expression: popup
---
  Apps
  Failed to load apps.

     App directory unavailable  The app directory request failed. Retry, or
                                press Esc to continue.
❯ 1. Retry                      Reload installed and available apps.

  Press enter to confirm or esc to go back
